--- a/k8s/clusters/cluster-0/manifests/apps/home/mealie/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/home/mealie/helm-release.yaml
@@ -35,7 +35,7 @@ spec:
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+          # traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
         hosts:
           - host: "meals.${SECRET_DOMAIN}"
             paths:
