--- a/k8s/clusters/cluster-0/manifests/core/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -164,7 +164,7 @@ spec:
         tls:
           - hosts:
               - "prom-server.${SECRET_DOMAIN}"
-            secretName: prom-server-cert
+            secretName: tls.prom-server
       thanosService:
         enabled: true
       prometheusSpec:
