--- a/k8s/clusters/sidero/manifests/default/sidero/servers/kustomization.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/servers/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cp-0.yaml
+  - node-0.yaml
   - node-1.yaml
   - node-3.yaml
