--- a/k8s/clusters/sidero/manifests/default/sidero/servers/kustomization.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/servers/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cp-0.yaml
+  - cp-1.yaml
   - node-0.yaml
   - node-1.yaml
   - node-2.yaml
