deploy stackgres helm repo

--- a/k8s/clusters/cluster-0/flux/repositories/git/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/repositories/git/kustomization.yaml
@@ -9,4 +9,5 @@ resources:
   - invidious-charts-git.yaml
   - kubegres.yaml
   - mintel-dex-charts.yaml
+  - stackgres-charts.yaml
   - version-checker.yaml
