--- a/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
@@ -93,14 +93,15 @@ stringData:
   SECRET_MATRIX_SLACK_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:NWMyRVpRc7oGzmHTdEYA6B6QvU7d1dXh,iv:d+VeiKMmrcK7RGi+RBTfQdv9AmOl8S7zecQxbBEzx7g=,tag:uwUo+qrOj7EbShQx1+it/Q==,type:str]
   SECRET_MATRIX_MEDIA_S3_ACCESS_KEY_ID: ENC[AES256_GCM,data:qCn853IxTqGZDx1f7W/JTkDL4FY=,iv:MDwcgBjUyjewpXofSKe7upJMLpISn3tuK+7lNn+ndVU=,tag:449QB5ZslN40Mb6v/VHwuA==,type:str]
   SECRET_MATRIX_MEDIA_S3_ACCESS_SECRET: ENC[AES256_GCM,data:zkAqaJdIKKc0imcvRlZjhoLvqu7eMtTc/PqTuXLiG3fyHC+SfkNSsA==,iv:7L5poGPoJ3KXbmWM/qT1Ajn4ZdJFaVwwJogltq/P1jw=,tag:TV4rsTyGSrL/jqnOwfgPBw==,type:str]
+  SECRET_STACKGRES_ADMIN_PASSWORD: ENC[AES256_GCM,data:hxUzekg6owcHod0vh7V/ltg9snYhaLQB,iv:1JTo9XXL8prdHKB/E10PScs1XtM0YTgEyaviqFxmluY=,tag:2pwhKpQbRd5LFIf2e2v20w==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2022-02-06T00:11:15Z"
-  mac: ENC[AES256_GCM,data:zTYTWCTE+Ilfln0Futs/s9XTI0mYJpK4GaM5FVV3ix/Yi0laZA2Ot8eK5CD5CHuW9ogePRellcyD9xblV85XnSlH7NedLMQR358wst/T+HoHghtRVSZVWst8KxSHPhDha9AOEPrRi3hE2R46mMWFh5IWjvB2PhR/gaArkjd7Tzw=,iv:y5NPw9tiTLJ9B+Usoe2lmo5iVVRA5GwsGE+FgsaNfr0=,tag:xuSk4xVbx8bWYThCnQ1A/g==,type:str]
+  lastmodified: "2022-03-01T16:01:38Z"
+  mac: ENC[AES256_GCM,data:SWNTWWrXASa60qMnjDGP2MmjVmz9bFMGmrG+snji3HSNu3FVz3MAWnzDWbIhrbWV+XSShLfjdcbHntUPTlfVVxhWQEZtv0yp4HX4F3k3cMdDP/0l7lgTfRflI/ONWnN+4VkwGfObTsjnvhh7ogoXeETMbG3yibqs47R/izm99MI=,iv:gPsdbOilCAMHbTxGpejSjBZ6L2ugjPTtA2dZQoBh3bw=,tag:64D64C6VXoYobhnOBCKE9w==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
