--- a/k8s/clusters/cluster-0/flux/repositories/git/stackgres-charts.yaml
+++ b/k8s/clusters/cluster-0/flux/repositories/git/stackgres-charts.yaml
@@ -8,9 +8,9 @@ spec:
   interval: 10m
   url: https://gitlab.com/ongresinc/stackgres
   ref:
-    tag: 1.1.0
+    tag: release-1.1.0
   ignore: |
     # exclude all
     /*
     # include charts directory
-    !/stackgres-k8s/install/helm
+    !/stackgres-k8s/install/helm/stackgres-operator/
