--- a/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
@@ -66,13 +66,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps-network-dns-update
+  name: apps-network-cloudflare-ddns
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-namespaces
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/network/dns-update"
+  path: "./k8s/clusters/cluster-0/manifests/apps/network/cloudflare-ddns"
   prune: true
   wait: true
   sourceRef:
