--- a/k8s/clusters/cluster-0/flux/orchestration/apps-db.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-db.yaml
@@ -9,7 +9,7 @@ spec:
     - name: cluster-namespaces
     - name: rook-ceph-cluster
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/db/kubegres"
+  path: "./k8s/clusters/cluster-0/manifests/db/kubegres"
   prune: true
   wait: true
   sourceRef:
@@ -19,23 +19,23 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-kind: Kustomization
-metadata:
-  name: apps-db-stackgres-operator
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: cluster-namespaces
-  interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/db/stackgres-operator"
-  prune: true
-  wait: true
-  sourceRef:
-    kind: GitRepository
-    name: k8s-gitops
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-gpg
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# kind: Kustomization
+# metadata:
+#   name: apps-db-stackgres-operator
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: cluster-namespaces
+#   interval: 5m
+#   path: "./k8s/clusters/cluster-0/manifests/db/stackgres-operator"
+#   prune: true
+#   wait: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: k8s-gitops
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-gpg
