--- a/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
@@ -10,7 +10,7 @@ spec:
     - name: rook-ceph-cluster
     - name: core-traefik
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/network/omada"
+  path: "./k8s/clusters/cluster-0/manifests/network/omada"
   prune: true
   wait: true
   sourceRef:
@@ -32,7 +32,7 @@ spec:
     - name: rook-ceph-cluster
     - name: core-traefik
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/network/unifi"
+  path: "./k8s/clusters/cluster-0/manifests/network/unifi"
   prune: true
   wait: true
   sourceRef:
@@ -52,7 +52,7 @@ spec:
   dependsOn:
     - name: cluster-namespaces
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/network/external-dns"
+  path: "./k8s/clusters/cluster-0/manifests/network/external-dns"
   prune: true
   wait: true
   sourceRef:
@@ -72,7 +72,7 @@ spec:
   dependsOn:
     - name: cluster-namespaces
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/network/cloudflare-ddns"
+  path: "./k8s/clusters/cluster-0/manifests/network/cloudflare-ddns"
   prune: true
   wait: true
   sourceRef:
@@ -92,7 +92,54 @@ spec:
   dependsOn:
     - name: cluster-namespaces
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/network/adguard"
+  path: "./k8s/clusters/cluster-0/manifests/network/adguard"
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: k8s-gitops
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: core-traefik
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-namespaces
+    - name: traefik-crds
+    - name: core-cilium
+    - name: core-cert-manager
+  interval: 5m
+  path: "./k8s/clusters/cluster-0/manifests/network/traefik"
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: k8s-gitops
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: core-error-pages
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-namespaces
+    - name: traefik-crds
+    - name: core-cilium
+    - name: core-cert-manager
+    - name: core-traefik
+  interval: 5m
+  path: "./k8s/clusters/cluster-0/manifests/network/error-pages"
   prune: true
   wait: true
   sourceRef:
