--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - apps-vpn-gateway.yaml
   - core-cert-manager.yaml
   - core-certificates.yaml
+  - core-flux-system.yaml
   - core-kube-system.yaml
   - core-cilium.yaml
   - core-kasten-io.yaml
