--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,13 +15,14 @@
     "github>carpenike/k8s-gitops//.github/renovate/semanticCommits",
     "github>carpenike/k8s-gitops//.github/renovate/allowedVersions",
     "github>carpenike/k8s-gitops//.github/renovate/autoMerge",
+    "github>carpenike/k8s-gitops//.github/renovate/updateSchedule",
   ],
   platform: "github",
   username: "carpenike-bot[bot]",
   repositories: ["carpenike/k8s-gitops"],
   onboarding: false,
   requireConfig: false,
-  gitAuthor: "carpenike-bot <87358111+carpenike[bot]@users.noreply.github.com>",
+  gitAuthor: "carpenike-bot <1302442+carpenike[bot]@users.noreply.github.com>",
   timezone: "America/New_York",
   dependencyDashboardTitle: "Renovate Dashboard",
   suppressNotifications: ["prIgnoreNotification"],
