fix branch name

--- a/.github/workflows/schedule-renovate.yaml
+++ b/.github/workflows/schedule-renovate.yaml
@@ -16,7 +16,7 @@ on:
     - cron: "0 * * * *"
   push:
     branches:
-      - main
+      - master
     paths:
       - ".github/renovate.json5"
       - ".github/renovate/**.json"
