deprecate / remove adguard

--- a/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
@@ -82,26 +82,26 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-kind: Kustomization
-metadata:
-  name: apps-network-adguard
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: cluster-namespaces
-  interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/network/adguard"
-  prune: true
-  wait: true
-  sourceRef:
-    kind: GitRepository
-    name: k8s-gitops
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-gpg
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# kind: Kustomization
+# metadata:
+#   name: apps-network-adguard
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: cluster-namespaces
+#   interval: 5m
+#   path: "./k8s/clusters/cluster-0/manifests/network/adguard"
+#   prune: true
+#   wait: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: k8s-gitops
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-gpg
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
