neglected to add the home namespace

--- a/k8s/clusters/cluster-0/manifests/home/frigate/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/home/frigate/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - config-pvc.yaml
   - helm-release.yaml
+namespace: home
 configMapGenerator:
   - name: frigate-config
     files:
