--- a/k8s/clusters/cluster-0/manifests/network/unifi/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/network/unifi/helm-release.yaml
@@ -6,12 +6,10 @@ metadata:
   namespace: network
 spec:
   interval: 5m
-  releaseName: unifi
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
       chart: unifi
-      version: 4.6.1
+      version: 4.7.0
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -64,7 +62,7 @@ spec:
 
     resources:
       requests:
-        memory: 500Mi
+        memory: 1024M
         cpu: 35m
       limits:
-        memory: 750Mi
+        memory: 1536Mi
