--- a/k8s/clusters/cluster-0/crds/rook-ceph/crds.yaml
+++ b/k8s/clusters/cluster-0/crds/rook-ceph/crds.yaml
@@ -9,7 +9,7 @@ spec:
   url: https://github.com/rook/rook.git
   ref:
     # renovate: registryUrl=https://charts.rook.io/release chart=rook-ceph
-    tag: v1.8.1
+    tag: v1.8.8
   ignore: |
     # exclude all
     /*
@@ -49,6 +49,9 @@ spec:
     - apiVersion: apiextensions.k8s.io/v1
       kind: CustomResourceDefinition
       name: cephfilesystems.ceph.rook.io
+    - apiVersion: apiextensions.k8s.io/v1
+      kind: CustomResourceDefinition
+      name: cephfilesystemsubvolumegroups.ceph.rook.io
     - apiVersion: apiextensions.k8s.io/v1
       kind: CustomResourceDefinition
       name: cephnfses.ceph.rook.io
