attempt to use default service annotations for omada-controller

--- a/k8s/clusters/cluster-0/manifests/network/omada/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/network/omada/helm-release.yaml
@@ -52,10 +52,10 @@ spec:
             secretName: tls.omada
 
     service:
-      main:
-        enabled: true
-        annotations:
-          traefik.ingress.kubernetes.io/service.serversscheme: https
+      # main:
+      #   enabled: true
+      #   annotations:
+      #     traefik.ingress.kubernetes.io/service.serversscheme: https
       controller:
         enabled: true
         type: LoadBalancer
